--- a/index.html
+++ b/index.html
@@ -16,11 +16,35 @@
 <body>
   <div id="app">
 
-    <section class="modal">
-      {{produto}}
+    <section class="modal" v-if="produto">
+      
+      <div class="modal_container">
+        <div class="modal_img">
+          <img :src="produto.img" :alt="produto.nome">
+        </div>
+
+        <div class="modal_dados">
+          <span class="modal_preco">{{produto.preco}}</span>
+          <h2 class="modal_titulo">{{produto.nome}}</h2>
+          <p>{{produto.desricao}}</p>
+          <button class="modal_btn">Adicionar Item</button>
+        </div>
+      </div>
+
+      <div class="reviews">
+        <h2 class="reviews_subtitulo">Avaliações</h2>
+        <ul>
+          <li v-for="review in produto.reviews" class="review">
+            <p class="review_descricao">{{review.descricao}}</p>
+            <p class="review_usuario">{{review.nome}} | {{review.estrelas}} estrelas</p>
+          </li>
+        </ul>
+      </div>
+
     </section>
 
     <section class="produtos">
+     
       <div v-for="item in produtos" @click="fetchDescricao(item.id)" :key="item.id" class="produto">
         <img :src="item.img" :alt="item.nome" class="produto_img" />
         <div class="produto_info">
@@ -28,6 +52,7 @@
           <h2 class="produto_titulo">{{item.nome}}</h2>
         </div>
       </div>
+
     </section>
 
   </div>
