--- a/index.html
+++ b/index.html
@@ -19,12 +19,6 @@
     <header class="header">
       <img class="logo" src="./assets/techno.svg" alt="Techno">
       <div class="carrinho_menu">{{carrinhoTotal | numeroPreco}} | {{carrinho.length}}</div>
-      <ul>
-        <li v-for="(item, index) in carrinho">
-          <p>{{item.nome}}</p>
-          <button @click="removerItem(index)">x</button>
-        </li>
-      </ul>
     </header>
 
     <section class="produtos">
@@ -62,10 +56,28 @@
       </div>
     </section>
 
+    <section class="carrinho_modal" :class="{ativo: carrinhoAtivo}" @click="clickForaCarrinho">
+      <div class="carrinho_container">
+        <button class="carrinho_fechar" @click="carrinhoAtivo = false">X</button>
+        <h2 class="carrinho_titulo">Carrinho</h2>
+        <div v-if="carrinho.length > 0">
+          <ul class="carrinho_lista">
+            <li v-for="(item, index) in carrinho" class="carrinho_item">
+              <p>{{item.nome}}</p>
+              <p class="carrinho_preco">{{item.preco | numeroPreco}}</p>
+              <button class="carrinho_remover" @click="removerItem(index)">X</button>
+            </li>
+          </ul>
+          <p class="carrinho_total">{{carrinhoTotal | numeroPreco}}</p>
+          <button class="finalizar_compra">Finalizar Compra</button>
+        </div>
+        <p v-else>O carrinho está vazio.</p>
+      </div>
+    </section>
+
     <div class="alerta" :class="{ativo: alertaAtivo}">
       <p class="alerta_msg">{{mensagemAlerta}}</p>
     </div>
-
   </div>
 
   <script src="app.js"></script>
